--- a/requirements.txt
+++ b/requirements.txt
@@ -48,6 +48,7 @@ pure-eval==0.2.2
 pyarrow==14.0.2
 pydeck==0.8.1b0
 Pygments==2.17.2
+pyspellchecker==0.8.0
 python-dateutil==2.8.2
 pytz==2023.3.post1
 PyYAML==6.0.1
@@ -66,7 +67,6 @@ six==1.16.0
 smmap==5.0.1
 soundex==1.1.3
 soupsieve==2.5
-spellchecker==0.4
 stack-data==0.6.3
 streamlit==1.30.0
 tenacity==8.2.3
