--- a/requirements.txt
+++ b/requirements.txt
@@ -82,6 +82,7 @@ typing_extensions==4.9.0
 tzdata==2023.4
 tzlocal==5.2
 urllib3==2.1.0
+Unidecode==1.3.8
 validators==0.22.0
 watchdog==3.0.0
 wcwidth==0.2.13
