--- a/requirements.txt
+++ b/requirements.txt
@@ -39,6 +39,7 @@ numpy==1.26.3
 packaging==23.2
 pandas==2.1.4
 parso==0.8.3
+pickle5==0.0.12
 pillow==10.2.0
 platformdirs==4.1.0
 prompt-toolkit==3.0.43
@@ -60,11 +61,12 @@ requests==2.31.0
 rich==13.7.0
 rpds-py==0.17.1
 safetensors==0.4.1
-scikit-learn==1.4.0
+scikit-learn==1.3.2
 scipy==1.11.4
 sentencepiece==0.1.99
 silpa-common==0.3
 six==1.16.0
+scipy==1.11.3
 smmap==5.0.1
 soundex==1.1.3
 soupsieve==2.5
